@@ -23,6 +23,7 @@ Version 1.0.xxx (Oktober xxth 2013)
 - Implemented: Room Selector now also vissible on mobile devices
 - Fixed: Editing (changing the name) of security devices
 - Implemented: Added Visibility/Solar Radiation to Lua scripts
+- Implemented: Razberry Smoke Alarm
 
 Version 1.0.1087 (Oktober 16th 2013)
 - Implemented: Login page (solves the caching problems)
